--- a/curricula-feedback-form.html
+++ b/curricula-feedback-form.html
@@ -62,7 +62,7 @@ permalink: /courses/curricula-contribution/
     </div>
 
     <div class="mb-3">
-      <label for="level" class="form-label">Level of Contribution</label>
+      <label for="level" class="form-label">Level</label>
       <select class="form-control" id="level" name="level" required>
         <option value="" disabled selected>Select Level</option>
         <option value="Introductory">Introductory</option>
