--- a/courses_other.html
+++ b/courses_other.html
@@ -6737,6 +6737,91 @@ permalink: /courses/other-courses/
     </td>
 </tr>
 
+ <!-- 78 courses -->
+ <tr>
+    <td>Wellcome Connecting Science</td>
+    <td>
+        <li>Establishing Capacity for Pathogen Genomics</li>
+    </td>
+    <td>Intermediate</td>
+    <td>Public Health</td>
+    <td> Research and healthcare professionals based in Africa interested in implementing effective strategies for establishing and implementing pathogen genomics and surveillance capacity. Priority will be given to individuals in public health institutions who have started, or are planning to set up, infrastructure and data pipelines for pathogen genomics. Applicants must have some  knowledge in genomics, clinical management or public health, and interested in developing skills to train others.
+    </td>
+    <td>Epidemiology,Pathogen genomics for clinicians, Sample processing DNA extraction, Library prep, Bioinformatics Data Analysis, data visualisation and Management</td>
+    <td>
+
+
+
+        <!-- inside modal-->
+        <!-- Button to Open the Modal -->
+        <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+            data-target="#myModal77">
+            more
+        </button>
+
+        <!-- The Modal -->
+        <div class="modal fade" id="myModal77">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <p class="modal-title font-weight-bold">Genomics for Clinicians</p>
+                        <button type="button" class="close"
+                            data-dismiss="modal">&times;</button><br>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Location</th>
+                                    <th>Sub-topics</th>
+                                    <th>Formal assessment</th>
+                                    <th>Accredited</th>
+                                    <th>Available</th>
+                                    <th>Duration</th>
+                                    <th>Live/Online</th>
+                                    <th>With subtitles</th>
+                                </tr>
+
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Ethiopia</td>
+                                    <td>Session 1:Practical approaches to establishing genomics and data infrastructure                                          <br><br> 
+                                        Session 2: Data workflows, analysis and interpretation <br><br> 
+                                        Session 3: Pathogen genomics application in local and global contexts  <br><br>
+                                        Session 4: Data collection, linkage and intergration<br><br>
+                                        Session 5: Communication of data and public health decision-making   <br><br>
+                                    
+                                    </td>
+                                    <td>No</td>
+                                    <td>No</td>
+                                    <td></td>
+                                    <td>5.5 day workshop </td>
+                                    <td>Face to Face </td>
+                                    <td>No</td>
+                                </tr>
+                            </tbody>
+
+                        </table>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger btn-sm"
+                            data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+    </td>
+</tr>
 
 
 
