--- a/curricula-feedback-form.html
+++ b/curricula-feedback-form.html
@@ -17,6 +17,11 @@ permalink: /courses/curricula-contribution/
     </div>
 
     <div class="mb-3">
+      <label for="organisation" class="form-label">Organisation</label>
+      <input type="text" class="form-control" id="organisation" name="organisation" placeholder="" required>
+    </div>
+
+    <div class="mb-3">
       <label for="email" class="form-label">Email address</label>
       <input type="email" class="form-control" id="email" name="email" placeholder="name@domain.com" required>
     </div>
