--- a/about-us.html
+++ b/about-us.html
@@ -26,7 +26,7 @@ permalink: /about/
 <div class="row">
   <div class="col-sm-10">
 
-    <p>Together with the Bill and Melinda Gates Foundation, the
+    <p>Together with the Gates Foundation, the
       Africa CDC has developed a Pathogen Genomics Initiative to enable the roll out of next generation
       sequencing
       (NGS) for pathogen surveillance and response. Several nodes are being established across Africa under this
