form description added

--- a/curricula-feedback-form.html
+++ b/curricula-feedback-form.html
@@ -4,7 +4,12 @@ title: Pathogen Surveillance Training Courses Contribution
 permalink: /courses/curricula-contribution/
 ---
 
+
+
 <div class="container-fluid">
+
+  <span>Kindly use this contribution form to make any suggestions, contributions, and/or queries regarding the curriculum. Your feedback is important to ensure the curriculum remains relevant and effective.
+    <span>
   <form action="https://submit-form.com/FUPgKVql9" method="POST">
     <div class="mb-3">
       <label for="name" class="form-label">Firstname</label>
@@ -79,8 +84,8 @@ permalink: /courses/curricula-contribution/
     </div>
 
     <div class="mb-3">
-      <label for="message" class="form-label">Your Message</label>
-      <textarea class="form-control" id="message" name="message" rows="5" placeholder="Your message here..." required></textarea>
+      <label for="message" class="form-label">Your contribution</label>
+      <textarea class="form-control" id="message" name="message" rows="5" placeholder="Your suggestions, contributions, and or queries..." required></textarea>
     </div>
 
     <br>
