changed text on send button

--- a/curricula-feedback-form.html
+++ b/curricula-feedback-form.html
@@ -89,7 +89,7 @@ permalink: /courses/curricula-contribution/
     </div>
 
     <br>
-    <button type="submit" class="btn btn-danger">Send Message</button>
+    <button type="submit" class="btn btn-danger">Send</button>
   </form>
 
   <script>
