--- a/curricula.html
+++ b/curricula.html
@@ -414,6 +414,7 @@ permalink: /courses/curricula/
 
     <div class="accordion">
         <!-- Foundational Section -->
+        The Pathogen Surveillance Training Curriculum aims to provide a recommended set of courses with topic areas and indicative content for implementing pathogen surveillance and applied genomic epidemiology training within public health. The curriculum includes foundational and pathogen-specific courses, targeted to specific job descriptions (i.e., persona) in public health facilities.
         <div class="accordion-item">
             <button class="accordion-header">
                 <span class="accordion-title">Foundational</span>
@@ -423,7 +424,7 @@ permalink: /courses/curricula/
                 <!-- Overview Section -->
                 <div class="feature-description">
                     <h3>Basic Foundational Courses</h3>
-                    <p>Basic Foundational Courses</p>
+                    <p>We are inviting individuals with expertise in genomic epidemiology, bioinformatics, and applied pathogen surveillance to register their interest in participating in the ongoing development of our curriculum. This is an exciting opportunity to contribute to the development and implementation of a standardised, scalable, adaptable, and dynamic curriculum that can be applied globally. <a href="{{ site.url }}courses/curricula-contribution/" target="_blank">Click here to participate</a></p>
                 </div>
 
                 <!-- Tabs -->
@@ -756,7 +757,7 @@ permalink: /courses/curricula/
                 <!-- Overview Section -->
                 <div class="feature-description">
                     <h3>Pathogen-Specific Courses</h3>
-                    <p>Pathogen-Specific Courses like bacteria, viruses, and fungi.</p>
+                    <p>We are inviting individuals with expertise in genomic epidemiology, bioinformatics, and applied pathogen surveillance to register their interest in participating in the ongoing development of our curriculum. This is an exciting opportunity to contribute to the development and implementation of a standardised, scalable, adaptable, and dynamic curriculum that can be applied globally. <a href="{{ site.url }}courses/curricula-contribution/" target="_blank">Click here to participate.</a></p>
                 </div>
 
                 <!-- Tabs -->
