updated layout of the curriculum

--- a/curricula.html
+++ b/curricula.html
@@ -414,7 +414,7 @@ permalink: /courses/curricula/
 
     <div class="accordion">
         <!-- Foundational Section -->
-        The Pathogen Surveillance Training Curriculum aims to provide a recommended set of courses with topic areas and indicative content for implementing pathogen surveillance and applied genomic epidemiology training within public health. The curriculum includes foundational and pathogen-specific courses, targeted to specific job descriptions (i.e., persona) in public health facilities.
+        <p>The Pathogen Surveillance Training Curriculum aims to provide a recommended set of courses with topic areas and indicative content for implementing pathogen surveillance and applied genomic epidemiology training within public health. The curriculum includes foundational and pathogen-specific courses, targeted to specific job descriptions (i.e., persona) in public health facilities.</p>
         <div class="accordion-item">
             <button class="accordion-header">
                 <span class="accordion-title">Foundational</span>
