--- a/curricula.html
+++ b/curricula.html
@@ -424,7 +424,7 @@ permalink: /courses/curricula/
                 <!-- Overview Section -->
                 <div class="feature-description">
                     <h3>Basic Foundational Courses</h3>
-                    <p>We are inviting individuals with expertise in genomic epidemiology, bioinformatics, and applied pathogen surveillance to register their interest in participating in the ongoing development of our curriculum. This is an exciting opportunity to contribute to the development and implementation of a standardised, scalable, adaptable, and dynamic curriculum that can be applied globally. <a href="{{ site.url }}courses/curricula-contribution/" target="_blank">Click here to participate</a></p>
+                    <p>The Foundational Courses are aimed at building generic, wet-laboratory, and bioinformatics knowledge and skills to adequately equip public health personas.</p>
                 </div>
 
                 <!-- Tabs -->
@@ -757,6 +757,9 @@ permalink: /courses/curricula/
                 <!-- Overview Section -->
                 <div class="feature-description">
                     <h3>Pathogen-Specific Courses</h3>
+                    <p>
+                      The Pathogen-Specific Courses build on the Foundational Courses and focus on building pathogen-specific knowledge and skills to effectively prepare public health personas for pathogen genomic surveillance.
+                    </p>
 
                 </div>
 
